Fix/pwm duty as nanos (#25)
